alignment fix

--- a/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
+++ b/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
@@ -249,7 +249,7 @@ YIELD CALCULATIONS FORM
   }
 
   .button__ctn {
-   left: 60px;
+   left: 76px;
    position: relative;
    }
 
@@ -453,7 +453,7 @@ YIELD CALCULATIONS FORM
   color: red;
   font-size: 12px;
   position: relative;
-  left: -198px;
+  left: -81px;
   top: -7px;
 }
 
